[gd_scene load_steps=2 format=2]

[ext_resource path="res://erro.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 91.0
margin_top = 53.0
margin_right = 276.0
margin_bottom = 126.0
text = "1.insira um número "

[node name="Button2" type="Button" parent="."]
margin_left = 418.0
margin_top = 58.0
margin_right = 597.0
margin_bottom = 136.0
rect_rotation = -0.609369
text = "gere um número"

[node name="Button3" type="Button" parent="."]
margin_left = 694.0
margin_top = 57.0
margin_right = 859.0
margin_bottom = 129.0
text = "clique aqui "

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 102.0
margin_top = 186.0
margin_right = 272.0
margin_bottom = 274.0

[node name="Label" type="Label" parent="."]
margin_left = 417.0
margin_top = 171.0
margin_right = 608.0
margin_bottom = 251.0
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 699.0
margin_top = 171.0
margin_right = 870.0
margin_bottom = 256.0
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
